# mypass-gui

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
.github/workflows/: tauri.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/server/: manifest-full.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/db/: connection.rs  login_repo.rs  master_key_repo.rs  mod.rs
src-tauri/src/models/: credential.rs  login.rs  master_key.rs  mod.rs
src-tauri/src/services/: login_service.rs  master_key_service.rs  mod.rs
src-tauri/src/utils/: mod.rs  pass_manager.rs
src/components/: Connection.svelte  CredentialEntry.astro  CredentialEntry.svelte  CredentialFooter.svelte  CredentialHeader.svelte  CredentialSection.svelte  CredentialTable.svelte  CredentialTableEntry.svelte  CredentialUnlock.svelte  CredentialsList.astro  CredentialsList.svelte  DeleteModal.svelte  EditCredentialModal.svelte  LoginEntry.svelte  NewCredentialModal.svelte  Spinner.svelte
src/components/icons/: AddCredential.svelte  Copied.svelte  Copy.svelte  Dice.svelte  Edit.svelte  Hide.svelte  Lock.svelte  Refresh.svelte  Show.svelte  Trash.svelte  Unlock.svelte  Warning.svelte  addCredential.astro  arrowDown.svelte
src/components/layouts/: +layout.svelte
src/enums/: State.ts
src/layouts/: Layout.astro
src/pages/: dashboard.astro  index.astro
src/routes/: +page.svelte  dashboard.svelte
src/stores/: masterKeyStore.ts  sharedStateStore.ts
src/types/: Credential.ts  Login.ts
(+20 files in other folders)
